k8s/talos/apps/servarr/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan
      namespace: traefik
      sectionName: websecure
  hostnames:
    - jellyfin.home.lanlord.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: servarr-jellyfin
          port: 8096
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan
      namespace: traefik
      sectionName: websecure
  hostnames:
    - seerr.home.lanlord.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: servarr-seerr
          port: 5055
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan
      namespace: traefik
      sectionName: websecure
  hostnames:
    - sonarr.home.lanlord.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
          weight: 1
